# examples

./: .gitignore
RangedBased/: main.cpp  my_array.hpp
Rational/: CMakeLists.txt  Rational.cpp  Rational.hpp  main.cpp
Vector/: CMakeLists.txt  main.cpp  string.cpp  string.hpp  vector.cpp  vector.hpp
ch11/basic_struct/: Makefile  basic_struct.cpp
ch11/even_more_structures/: Makefile  even_more_structures.cpp
ch11/more_structures/: Makefile  more_structures.cpp  out
ch11/structure_pointers/: Makefile  structure_pointers.cpp
ch13/: notes.txt
ch13/Rational/: Rational.cpp  Rational.hpp  main.cpp
ch13/access_specifiers/: Makefile  access_specifiers.cpp
dynamic/: .main  .sc  .sh  CMakeLists.txt  main.cpp  string.cpp  string.hpp
midterm1/: main.cpp  rev.cpp  rev.hpp
midterm1/answers/: Triangle.cpp  Triangle.hpp  main.cpp
sample/: Makefile  sample.cpp
sutton/: main.cpp  string.cpp  string.hpp
templates/: main.cpp  min.cpp  myTemp.hpp
